# cuddle

./: Cargo.toml  README.md
cbor/src/: test_utils.rs
cbor/src/deserialize/: peek.rs
cbor/src/deserialize/peek/: array.rs  array_test.rs  simple.rs
cbor/src/serialize/: owned.rs
cli/: Cargo.toml
cli/src/: main.rs
cuddle/: Cargo.toml
cuddle-cli/: Cargo.toml
cuddle/src/: ast.rs  cddl.rs  error.rs  lib.rs  parser.rs
cuddle/src/parser/: string.rs
cyborg/: Cargo.toml
cyborg/src/: error.rs  parser.rs
nom-cbor/: Cargo.toml
nom-cbor/src/: ast.rs  error.rs  lib.rs  parsers.rs
nom-cbor/src/parsers/: string.rs
tests/: Cargo.toml  fixtures.rs
tests/fails/parse/: hexfloat-1.cddl  invalid-rule-1.cddl
tests/fails/resolve/: duplicate-1.cddl
tests/fixtures/constants/: number.cddl
tests/fixtures/examples/: many-concat.cddl  rfc-7071-1.cddl  rfc-7071-2.cddl  rfc-7071-4.cddl  rfc-7071-5.cddl
tests/fixtures/others/: prelude.cddl
