[package]
name = "cuddle"
version = "0.1.0"
edition = "2021"
description = "A library to parse and validate CDDL and CBOR."
license-file = "../LICENSE"

[lib]
name = "cuddle"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.0"
ciborium = "0.2.0"
either = "1.8.0"
lazy_static = "1.4.0"
nom = "7.1.2"
nom_locate = "4.1.0"
thiserror = "1.0.38"
